force-app/main/default/objects/Invoice__c/fields/Adjusted_in_PNC__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_in_PNC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adjusted in PNC?</label>
    <type>Checkbox</type>
</CustomField>