force-app/main/default/objects/Invoice__c/fields/Adjusted_in_PNC_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_in_PNC_Date_Time__c</fullName>
    <label>Adjusted in PNC Date/Time</label>
    <type>DateTime</type>
</CustomField>