force-app/main/default/objects/Invoice__c/fields/Billed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Billed_Amount__c</fullName>
    <inlineHelpText>Total of Bill Lines Including Taxes</inlineHelpText>
    <label>Total of Billing Lines</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>