force-app/main/default/objects/Invoice__c/fields/Charged_Amount__c.field-meta.xml
<CustomField>
    <fullName>Charged_Amount__c</fullName>
    <inlineHelpText>Total of Charge Lines Including Taxes</inlineHelpText>
    <label>+Total of Charge Lines</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>