force-app/main/default/objects/Invoice__c/fields/Migrated__c.field-meta.xml
<CustomField>
    <fullName>Migrated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Internal field used for migration</description>
    <inlineHelpText>Internal field used for migration</inlineHelpText>
    <label>Migrated</label>
    <type>Checkbox</type>
</CustomField>