force-app/main/default/objects/Invoice__c/fields/Payment_Amount_Total__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount_Total__c</fullName>
    <description>This field using for values to update in Invoice conga document.</description>
    <inlineHelpText>Rent + Tax Billed</inlineHelpText>
    <label>Rent Amount Total Billed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>