force-app/main/default/objects/Invoice__c/fields/Previous_Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Previous_Balance_Due__c</fullName>
    <description>This field using for values to update in Invoice conga document.</description>
    <label>+Previous Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>