force-app/main/default/objects/Invoice__c/fields/Total_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Due__c</fullName>
    <formula>Billed_Amount__c + Charged_Amount__c + Previous_Balance_Due__c -  Total_of_Charge_Waived__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Billed_Amount__c + Charged_Amount__c + Previous_Balance_Due__c</inlineHelpText>
    <label>=Grand Total Invoice Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>