force-app/main/default/objects/Invoice__c/fields/Total_Invoiced_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoiced_Amount__c</fullName>
    <formula>Billed_Amount__c + Charged_Amount__c - Total_of_Charge_Waived__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Bill Lines + Total Charge Lines Including Taxes - Total of Charge Waived Including Taxes</inlineHelpText>
    <label>=Total Invoiced Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>