force-app/main/default/objects/Invoice__c/fields/Total_of_Charge_Waived__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Charge_Waived__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Field stores total charge waived amount and it will be subtracted from the total invoice value.</description>
    <inlineHelpText>Field stores total charge waived amount and it will be subtracted from the total invoice value.</inlineHelpText>
    <label>-Total of Charge Waived</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>