force-app/main/default/objects/Invoice__c/fields/Void_In_PNC__c.field-meta.xml
<CustomField>
    <fullName>Void_In_PNC__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this is true, then the pnc invoice process will expire the invoice in pnc.</inlineHelpText>
    <label>Void In PNC?</label>
    <type>Checkbox</type>
</CustomField>