force-app/main/default/objects/Invoice__c/fields/Voided_In_PNC__c.field-meta.xml
<CustomField>
    <fullName>Voided_In_PNC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Voided In PNC?</label>
    <type>Checkbox</type>
</CustomField>