force-app/main/default/objects/Invoice__c/fields/Voided_In_PNC_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Voided_In_PNC_Date_Time__c</fullName>
    <label>Voided In PNC Date/Time</label>
    <type>DateTime</type>
</CustomField>