force-app/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LS_Contract__c</columns>
    <columns>Invoice_Due_Date__c</columns>
    <columns>Billed_Amount__c</columns>
    <columns>Payment_Sales_Tax__c</columns>
    <columns>Charged_Amount__c</columns>
    <columns>Balance_Due_Amount__c</columns>
    <columns>Paid_Invoice_Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>File_Generated__c</columns>
    <columns>Adjustment_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>